<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.mil_asus.smartub.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="171dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/icono_fondo"
        app:layout_constraintBottom_toTopOf="@+id/button_IniciarSesionMA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <Button
        android:id="@+id/button_IniciarSesionMA"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_iniciarsesion"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_RegistrarseMA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_RegistrarseMA"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_registrarse"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView_web_OnR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_IniciarSesionMA" />

    <TextView
        android:id="@+id/textView_web_OnR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
       android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/textview_OnR"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_RegistrarseMA" />

</android.support.constraint.ConstraintLayout>
